slettet fra daniel og la til mappe data

--- a/rapport.html
+++ b/rapport.html
@@ -6,9 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Gruppe 1">
+<meta name="author" content="Gruppe 1; Trond Steien, Andrine Juvodden, Simon T. H. Kristiansen, Anders Nybakk">
 
-<title>Rapport</title>
+<title>Opggave 1: Reliabilitet og verktøy for reproduserbar vitenskapelig data</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -66,7 +66,7 @@ div.csl-indent {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Rapport</h1>
+<h1 class="title">Opggave 1: Reliabilitet og verktøy for reproduserbar vitenskapelig data</h1>
 </div>
 
 
@@ -76,7 +76,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Gruppe 1 </p>
+             <p>Gruppe 1; Trond Steien, Andrine Juvodden, Simon T. H. Kristiansen, Anders Nybakk </p>
           </div>
   </div>
     
@@ -89,22 +89,31 @@ div.csl-indent {
 </header>
 
 
-<p>#Oppgave 1: Reliability and tools for reproducible data science</p>
+<section id="oppgave-1-reliability-and-tools-for-reproducible-data-science" class="level2">
+<h2 class="anchored" data-anchor-id="oppgave-1-reliability-and-tools-for-reproducible-data-science">Oppgave 1: Reliability and tools for reproducible data science</h2>
+</section>
 <section id="introduksjon" class="level2">
 <h2 class="anchored" data-anchor-id="introduksjon">Introduksjon</h2>
 <p>I vår studie har vi gjennomført VO2 max-tester over fire forskjellige dager for å vurdere påliteligheten av de innsamlede dataene. Formålet med disse testene var å undersøke hvor konsistente resultatene er under kontrollerte forhold. For å oppnå dette har vi forsøkt å standardisere flere variabler, inkludert treningsnivå og matinntak dagen før testene. Ifølge <span class="citation" data-cites="halperin2015">Halperin, Pyne, and Martin (<a href="#ref-halperin2015" role="doc-biblioref">2015</a>)</span> er det avgjørende å bruke standardiserte protokoller for å oppnå pålitelige resultater i fysiologiske tester. I tillegg har vi målt laktatnivåer umiddelbart etter avslutningen av hver test for å vurdere den fysiologiske responsen. Tidligere forskning har vist at laktatnivåer kan gi verdifull informasjon om anaerob kapasitet og treningsintensitet, noe som er viktig for å forstå atletisk ytelse (<span class="citation" data-cites="hopkins2000">Hopkins (<a href="#ref-hopkins2000" role="doc-biblioref">2000</a>)</span>; <span class="citation" data-cites="tanner2012">Tanner and Gore (<a href="#ref-tanner2012" role="doc-biblioref">2012</a>)</span>). Ved å kontrollere for disse variablene håper vi å oppnå en høy grad av reproduserbarhet i våre resultater.</p>
 </section>
-<section id="protokoll" class="level1">
-<h1>Protokoll</h1>
+<section id="protokoll" class="level2">
+<h2 class="anchored" data-anchor-id="protokoll">Protokoll</h2>
 <p>skriv noe</p>
 </section>
-<section id="resultater" class="level1">
-<h1>Resultater</h1>
+<section id="resultater" class="level2">
+<h2 class="anchored" data-anchor-id="resultater">Resultater</h2>
 <p>skriv noe, legg inn graf osv</p>
+</section>
+<section id="avvik-og-feilkilder" class="level2">
+<h2 class="anchored" data-anchor-id="avvik-og-feilkilder">Avvik og feilkilder</h2>
+<p>temp, luftfukt, tidspunkt, mat, unøyaktiget i framgangsmåte. laktat, dagsform, heiing osv.</p>
+</section>
+<section id="referanseliste" class="level2 unnumbered">
+
 
 </section>
 
-<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">Referanseliste</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
 <div id="ref-halperin2015" class="csl-entry" role="listitem">
 Halperin, I., D. B. Pyne, and D. T. Martin. 2015. <span>“Threats to Internal Validity in Exercise Science: A Review of Overlooked Confounding Variables.”</span> <em>Int J Sports Physiol Perform</em> 10 (7): 823–29. <a href="https://doi.org/10.1123/ijspp.2014-0566">https://doi.org/10.1123/ijspp.2014-0566</a>.
 </div>
