--- a/rapport.html
+++ b/rapport.html
@@ -123,30 +123,26 @@ div.csl-indent {
 </header>
 
 
-<section id="oppgave-1-reliability-and-tools-for-reproducible-data-science" class="level2">
-<h2 class="anchored" data-anchor-id="oppgave-1-reliability-and-tools-for-reproducible-data-science">Oppgave 1: Reliability and tools for reproducible data science</h2>
-</section>
-<section id="introduksjon" class="level2">
-<h2 class="anchored" data-anchor-id="introduksjon">Introduksjon</h2>
+<section id="introduksjon" class="level1">
+<h1>Introduksjon</h1>
 <p>I vår studie har vi gjennomført VO2 max-tester over fire forskjellige dager for å vurdere påliteligheten av de innsamlede dataene. Formålet med disse testene var å undersøke hvor konsistente resultatene er under kontrollerte forhold. For å oppnå dette har vi forsøkt å standardisere flere variabler, inkludert treningsnivå og matinntak dagen før testene. Ifølge <span class="citation" data-cites="halperin2015">Halperin, Pyne, and Martin (<a href="#ref-halperin2015" role="doc-biblioref">2015</a>)</span> er det avgjørende å bruke standardiserte protokoller for å oppnå pålitelige resultater i fysiologiske tester. I tillegg har vi målt laktatnivåer umiddelbart etter avslutningen av hver test for å vurdere den fysiologiske responsen. Tidligere forskning har vist at laktatnivåer kan gi verdifull informasjon om anaerob kapasitet og treningsintensitet, noe som er viktig for å forstå atletisk ytelse (<span class="citation" data-cites="hopkins2000">Hopkins (<a href="#ref-hopkins2000" role="doc-biblioref">2000</a>)</span>; <span class="citation" data-cites="tanner2012">Tanner and Gore (<a href="#ref-tanner2012" role="doc-biblioref">2012</a>)</span>). Ved å kontrollere for disse variablene håper vi å oppnå en høy grad av reproduserbarhet i våre resultater.</p>
 <p>I denne rapporten velger vi å fokusere på lakta-max og RER. Vi vil sammenlikne disse, regne ut standard avvik.</p>
 </section>
-<section id="protokoll" class="level2">
-<h2 class="anchored" data-anchor-id="protokoll">Protokoll</h2>
+<section id="protokoll" class="level1">
+<h1>Protokoll</h1>
 <p>Protokoll VO2maks-test</p>
 <p>Vi gjennomførte fire testdager. De to første var påfølgende dager, og de to siste var med en dag mellom. Hensikten med disse testdagene var å gjennomføre fysiologiske tester med høy grad av reliabilitet. Det er mange faktorer som kan påvirke validitet og reliabilitet, og det er velidg viktig å ta høyde for dette under fysiologisk testing. Vi tok flere forhåndsregler for å sikre så like testforhold som mulig.</p>
 <p>En VO2maks-test går ut på å måle hvor mange ml en person evner å ta opp og forbruke per minutt. Oksygenkravet øker lineært med økende belastning helt til personen når sin maksimale aerobe kapasitet, da kurven enten flater ut eller synker.</p>
 <p>Maksimalt oksygenopptak beskrives enten i absolutte tall (ml/min) eller som relative tall i forhold til kroppsvekt (ml/kg/min).</p>
-</section>
 <section id="metode" class="level2">
 <h2 class="anchored" data-anchor-id="metode">Metode:</h2>
 <p>VO2maks-testen ble gjennomført som en trappetrinnstest der motstanden økte med 20W hvert minutt til utmattelse, eller når RPM &lt; 60. Det registreres målinger av VO2maks ved hvert 30 sek. Deltakerne startet testen på en watt tilsvarende fysisk form og erfaring med sykkel. Etter testene var ferdige ble informasjonen innhentet og plottet i et ferdig formatert Excel-dokument.</p>
 <p>Da en tydelig protokoll ble fulgt for å etterstrebe så sikre og reliable tester som mulig, er det flere forhold som må tas underveis. Matinntak og koffeininntak fra samme dag og kvelden før ble registrert ved første test, og skulle være likt ved de påfølgende testene. Trening dagen før test ble også registrert, men lyktes ikke i å reprodusere dette da trening dagen før test 2 ble gårsdagens VO2maks-test. Vi hadde også føringer om at man skulle etterstrebe lik søvn på dagene før test. For å sikre lik grad av formuleringer og verbal instruks samt grad av engasjement og heiing, hadde hver deltaker samme testleder ved hver test.</p>
 </section>
-<section id="protokoll-1" class="level1">
-<h1>Protokoll</h1>
+<section id="protokoll-1" class="level2">
+<h2 class="anchored" data-anchor-id="protokoll-1">Protokoll</h2>
 <section id="før-test" class="level3">
-<h3 class="anchored" data-anchor-id="før-test">FØR TEST:</h3>
+<h3 class="anchored" data-anchor-id="før-test">Før test:</h3>
 <p>Starte laktatmaskin</p>
 <p>Bytte standard hvis den er tom (finnes i kjøleskap)</p>
 <p>Finne frem munnstykke og sette sammen dette</p>
@@ -155,9 +151,7 @@ div.csl-indent {
 <p>Ta med ny slange som festes i miksekammer</p>
 <p>Skru på Lode-sykkel.</p>
 <p>Skru på Vyntus og Lode PC</p>
-</section>
-<section id="kalibrere-oksygenanalysator" class="level3">
-<h3 class="anchored" data-anchor-id="kalibrere-oksygenanalysator">Kalibrere oksygenanalysator</h3>
+<p><strong>Kalibrere oksygenanalysator</strong></p>
 <p>Gasskalibrering</p>
 <p>Åpne gassflaske (lukkes når kalibrering er ferdig)</p>
 <p>Sjekke at sensor er koblet i maskinen</p>
@@ -168,9 +162,7 @@ div.csl-indent {
 <p>Kalibrere kammer</p>
 <p>Flytte sensor til kammer</p>
 <p>Skru av gass</p>
-</section>
-<section id="forberede-utstyr" class="level3">
-<h3 class="anchored" data-anchor-id="forberede-utstyr">forberede utstyr</h3>
+<p><strong>Forberede utstyr</strong></p>
 <p>Lage ny pasient på Vyntus og Lode</p>
 <p>Idr4000_h24_g1_idx</p>
 <p>Veie personen i så lite klær som mulig (trekke fra 300g for klær)</p>
@@ -192,27 +184,27 @@ div.csl-indent {
 <p>Vifte?</p>
 </section>
 <section id="etter-test" class="level3">
-<h3 class="anchored" data-anchor-id="etter-test">ETTER TEST:</h3>
+<h3 class="anchored" data-anchor-id="etter-test">Etter test:</h3>
 <p>Avslutte test på begge PC</p>
 <p>Spørre om Borg skala</p>
 <p>1 minutt etter endt test skal det tas laktat-prøve. Tok 2 prøver for å sikre god reliabilitet.</p>
-</section>
-<section id="hente-rapport" class="level3">
-<h3 class="anchored" data-anchor-id="hente-rapport">Hente rapport:</h3>
+<p><strong>Hente rapport:</strong></p>
 <p>Rapport: INN_TABELL:30SEK_MIX</p>
 <p>Søke opp id-nr.</p>
 <p>Lagre i rett mappe: F10 (nederste knapp)</p>
 <p>Lagre i rett mappe på minnepenn</p>
 <p>Overføre til One Drive på labbPCn</p>
 </section>
-<section id="standardisering" class="level3">
-<h3 class="anchored" data-anchor-id="standardisering">Standardisering:</h3>
-<p>Hva harvi standardisert?</p>
-<p>START av test: husk labfrakk</p>
-<p>Start vyntus 1 minutt før</p>
 </section>
-<section id="resultater" class="level2">
-<h2 class="anchored" data-anchor-id="resultater">Resultater</h2>
+</section>
+<section id="standardisering" class="level1">
+<h1>Standardisering:</h1>
+<p>I dette forsøket valgte vi å standardisere matinntak og koffeininntak i forkant av testen. Vi ønsket at testdeltakerne skulle spise det samme de tre siste måltidene før testen, og ha likt koffeininntak samme dag som testen.</p>
+<p>Vi kunne også ha valgt å standardisere trening, men på grunn av forskjellig treningsopplegg hos deltakerne lot ikke dette seg gjøre.</p>
+<p>Standardisering av tidspunkt ble gjort for oss med reservasjon av laboratorium 2. Helt standardisert blir det likevel ikke fordi i testuke 1 er testdagene rett etter hverandre, mens i testuke to er det en hviledag mellom testene.</p>
+</section>
+<section id="resultater" class="level1">
+<h1>Resultater</h1>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -257,10 +249,8 @@ div.csl-indent {
 </details>
 </div>
 <p>Tabell over deltakere</p>
-</section>
-</section>
-<section id="tabell-over-demografiske-variabler-deltagerne.-n-antall-deltagere." class="level1">
-<h1>Tabell over demografiske variabler deltagerne. (n= antall deltagere).</h1>
+<section id="tabell-over-demografiske-variabler-deltagerne.-n-antall-deltagere." class="level2">
+<h2 class="anchored" data-anchor-id="tabell-over-demografiske-variabler-deltagerne.-n-antall-deltagere.">Tabell over demografiske variabler deltagerne. (n= antall deltagere).</h2>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -293,8 +283,8 @@ div.csl-indent {
 </details>
 </div>
 </section>
-<section id="tabell-over-demografiske-variabler-fordelt-etter-kjønn.-n-antall-deltagere." class="level1">
-<h1>Tabell over demografiske variabler fordelt etter kjønn. (n= antall deltagere).</h1>
+<section id="tabell-over-demografiske-variabler-fordelt-etter-kjønn.-n-antall-deltagere." class="level2">
+<h2 class="anchored" data-anchor-id="tabell-over-demografiske-variabler-fordelt-etter-kjønn.-n-antall-deltagere.">Tabell over demografiske variabler fordelt etter kjønn. (n= antall deltagere).</h2>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -327,9 +317,11 @@ div.csl-indent {
 </div>
 </div>
 <p>variasjon eller reliabilitetstallet til den la.max, så den rer.max. sammenlikne til slutt</p>
-<section id="standard-avvik" class="level3">
-<h3 class="anchored" data-anchor-id="standard-avvik">Standard avvik:</h3>
-<p><strong>laktat</strong></p>
+</section>
+<section id="standard-avvik" class="level2">
+<h2 class="anchored" data-anchor-id="standard-avvik">Standard avvik:</h2>
+<section id="laktat" class="level3">
+<h3 class="anchored" data-anchor-id="laktat">Laktat</h3>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -360,7 +352,9 @@ div.csl-indent {
 16 t4        G4     15.4 NA    </code></pre>
 </div>
 </div>
-<p><strong>RER</strong></p>
+</section>
+<section id="rer" class="level3">
+<h3 class="anchored" data-anchor-id="rer">RER</h3>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -391,7 +385,9 @@ div.csl-indent {
 16 t4        G4     1.14 NA      </code></pre>
 </div>
 </div>
-<p><strong>Graf over laktatmålingene</strong></p>
+</section>
+<section id="graf-over-laktatmålingene" class="level3">
+<h3 class="anchored" data-anchor-id="graf-over-laktatmålingene">Graf over laktatmålingene</h3>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -415,6 +411,9 @@ div.csl-indent {
 </div>
 </div>
 </div>
+</section>
+<section id="graf-over-rer-målingene" class="level3">
+<h3 class="anchored" data-anchor-id="graf-over-rer-målingene">Graf over RER-målingene</h3>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -433,15 +432,18 @@ div.csl-indent {
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="rapport_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="rapport_files/figure-html/unnamed-chunk-7-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
 </section>
-<section id="utregning-av-variasjonskoeffisient" class="level2">
-<h2 class="anchored" data-anchor-id="utregning-av-variasjonskoeffisient">Utregning av variasjonskoeffisient</h2>
-<p>###Laktat maks</p>
+</section>
+</section>
+<section id="utregning-av-variasjonskoeffisient" class="level1">
+<h1>Utregning av variasjonskoeffisient</h1>
+<section id="laktat-maks" class="level2">
+<h2 class="anchored" data-anchor-id="laktat-maks">Laktat maks</h2>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -461,8 +463,9 @@ div.csl-indent {
 </details>
 </div>
 <p>Variasjonskoeffisienten for laktat maks var 7.6%</p>
-<section id="rer-maks" class="level3">
-<h3 class="anchored" data-anchor-id="rer-maks">RER maks</h3>
+</section>
+<section id="rer-maks" class="level2">
+<h2 class="anchored" data-anchor-id="rer-maks">RER maks</h2>
 <div class="cell">
 <details class="code-fold">
 <summary>Vis kode</summary>
@@ -484,10 +487,10 @@ div.csl-indent {
 <p>Variasjonskoeffisienten for RER maks var 1.6%</p>
 </section>
 </section>
-<section id="avvik-og-feilkilder" class="level2">
-<h2 class="anchored" data-anchor-id="avvik-og-feilkilder">Avvik og feilkilder</h2>
-<section id="standardisering-1" class="level3">
-<h3 class="anchored" data-anchor-id="standardisering-1">Standardisering</h3>
+<section id="avvik-og-feilkilder" class="level1">
+<h1>Avvik og feilkilder</h1>
+<section id="standardisering-1" class="level2">
+<h2 class="anchored" data-anchor-id="standardisering-1">Standardisering</h2>
 <p><strong>Livsstil</strong></p>
 <p>I forkant av perioden ble vi enig om å forsøke å standardisere trening og matinntak i forkant av testene. Dette visste vi med en gang kunne bli utfordrende ettersom deltakerne har egne treningsopplegg som de følger. Noen på gruppa hadde for eksempel forskjellige treningsbolker fra t1 og t2 til t3 og t4. I tillegg til dette var t1 og t2 satt opp to dager etter hverandre, mens det var en hviledag mellom t3 og t4. Id1 gjennomførte også en test mandagen før t1, så i den første testuken ble id1 testet tre ganger.</p>
 <p>Mat og drikke i forkant av testen var også vanskelig å standardisere da deltakerne også måtte ta hensyn til andre familimedlemmer ol. Underveis i testen var ikke dette en utfordring ettersom testen var så kort var det ikke nødvendig med inntak av mat eller drikke underveis.</p>
@@ -508,10 +511,9 @@ div.csl-indent {
 <p>I denne rapporten har vi også brukt data fra de andre gruppene i klassen vår. Dette gjør at vi har et bredere datautvalg som vi kan benytte oss av. Problemet med dette er at vi ikke har kontroll på andre gruppers protokoll, avvik, nøyaktighet osv. I datasettet var det for eksempel en plottefeil mellom rer.max og ve.max som vi ikke fikk endret på. Dette førte igjen til en feil i utregning av standard avvik, og at en eventuell tabell ikke ble brukbar.</p>
 </section>
 </section>
-<section id="referanseliste" class="level2 unnumbered">
+<section id="referanseliste" class="level1 unnumbered">
 
 
-</section>
 </section>
 
 <div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">Referanseliste</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
