--- a/rapport.html
+++ b/rapport.html
@@ -143,57 +143,69 @@ div.csl-indent {
 <h2 class="anchored" data-anchor-id="protokoll-1">Protokoll</h2>
 <section id="før-test" class="level3">
 <h3 class="anchored" data-anchor-id="før-test">Før test:</h3>
-<p>Starte laktatmaskin</p>
-<p>Bytte standard hvis den er tom (finnes i kjøleskap)</p>
-<p>Finne frem munnstykke og sette sammen dette</p>
-<p>Husk hansker</p>
-<p>Papir med neseklype rundt når den er klar</p>
-<p>Ta med ny slange som festes i miksekammer</p>
-<p>Skru på Lode-sykkel.</p>
-<p>Skru på Vyntus og Lode PC</p>
+<ol type="1">
+<li>Starte laktatmaskin</li>
+<li>Bytte standard hvis den er tom (finnes i kjøleskap)</li>
+<li>Finne frem munnstykke og sette sammen dette</li>
+<li>Husk hansker</li>
+<li>Papir med neseklype rundt når den er klar</li>
+<li>Ta med ny slange som festes i miksekammer</li>
+<li>Skru på Lode-sykkel.</li>
+<li>Skru på Vyntus og Lode PC</li>
+</ol>
 <p><strong>Kalibrere oksygenanalysator</strong></p>
-<p>Gasskalibrering</p>
-<p>Åpne gassflaske (lukkes når kalibrering er ferdig)</p>
-<p>Sjekke at sensor er koblet i maskinen</p>
-<p>Start kalibrering</p>
-<p>Godtar 2% feilmargin, hvis den er høyere må man rekalibrere</p>
-<p>Volumkalibrering-</p>
-<p>Feilmargin på 0,2% eller under godtas</p>
-<p>Kalibrere kammer</p>
-<p>Flytte sensor til kammer</p>
-<p>Skru av gass</p>
+<ol type="1">
+<li>Gasskalibrering</li>
+<li>Åpne gassflaske (lukkes når kalibrering er ferdig)</li>
+<li>Sjekke at sensor er koblet i maskinen</li>
+<li>Start kalibrering</li>
+<li>Godtar 2% feilmargin, hvis den er høyere må man rekalibrere</li>
+<li>Volumkalibrering-</li>
+<li>Feilmargin på 0,2% eller under godtas</li>
+<li>Kalibrere kammer</li>
+<li>Flytte sensor til kammer</li>
+<li>Skru av gass</li>
+</ol>
 <p><strong>Forberede utstyr</strong></p>
-<p>Lage ny pasient på Vyntus og Lode</p>
-<p>Idr4000_h24_g1_idx</p>
-<p>Veie personen i så lite klær som mulig (trekke fra 300g for klær)</p>
-<p>Lage plotteark</p>
-<p>Stille inn krankarm (172,5) og kalibrere sykkel på Lode PC</p>
-<p>Stille inn sykkel til deltaker</p>
-<p>Fullføre plotteark</p>
-<p>Klargjøre laktatrør, papir og teip, samt teip til neseklype</p>
-<p>Velge protokoll på Lode PC. Dersom personen ikke har erfaring med sykkel må man bli enige om en Watt man tror kan passe.</p>
-<p>Forklare forsøksperson hva testen innebærer, opplyse om borg skala og hvor på skala man vil ha den.</p>
-<p>VO2max – Kondisjon</p>
-<p>Målinger per 30 sek.</p>
-<p>Prestasjonstest – hvert sekund teller</p>
-<p>Watt-økning per 1 min.</p>
-<p>80-100 rpm, stopper test hvis under 60</p>
-<p>Pulsmåling</p>
-<p>Borg skala – 6 = sofa, 20 = maks</p>
-<p>Laktatmåling 1 min etter test – stikk i fingeren</p>
-<p>Vifte?</p>
+<ol type="1">
+<li><p>Lage ny pasient på Vyntus og Lode</p></li>
+<li><p>Idr4000_h24_g1_idx</p></li>
+<li><p>Veie personen i så lite klær som mulig (trekke fra 300g for klær)</p></li>
+<li><p>Lage plotteark</p></li>
+<li><p>Stille inn krankarm (172,5) og kalibrere sykkel på Lode PC</p></li>
+<li><p>Stille inn sykkel til deltaker</p></li>
+<li><p>Fullføre plotteark</p></li>
+<li><p>Klargjøre laktatrør, papir og teip, samt teip til neseklype</p></li>
+<li><p>Velge protokoll på Lode PC. Dersom personen ikke har erfaring med sykkel må man bli enige om en Watt man tror kan passe.</p></li>
+</ol>
+<p><strong>Forklare forsøksperson hva testen innebærer, opplyse om borg skala og hvor på skala man vil ha den.</strong></p>
+<ol type="1">
+<li>VO2max – Kondisjon</li>
+<li>Målinger per 30 sek.</li>
+<li>Prestasjonstest – hvert sekund teller</li>
+<li>Watt-økning per 1 min.</li>
+<li>80-100 rpm, stopper test hvis under 60</li>
+<li>Pulsmåling</li>
+<li>Borg skala – 6 = sofa, 20 = maks</li>
+<li>Laktatmåling 1 min etter test – stikk i fingeren</li>
+<li>Vifte?</li>
+</ol>
 </section>
 <section id="etter-test" class="level3">
 <h3 class="anchored" data-anchor-id="etter-test">Etter test:</h3>
-<p>Avslutte test på begge PC</p>
-<p>Spørre om Borg skala</p>
-<p>1 minutt etter endt test skal det tas laktat-prøve. Tok 2 prøver for å sikre god reliabilitet.</p>
+<ol type="1">
+<li>Avslutte test på begge PC</li>
+<li>Spørre om Borg skala</li>
+<li>1 minutt etter endt test skal det tas laktat-prøve. Tok 2 prøver for å sikre god reliabilitet.</li>
+</ol>
 <p><strong>Hente rapport:</strong></p>
-<p>Rapport: INN_TABELL:30SEK_MIX</p>
-<p>Søke opp id-nr.</p>
-<p>Lagre i rett mappe: F10 (nederste knapp)</p>
-<p>Lagre i rett mappe på minnepenn</p>
-<p>Overføre til One Drive på labbPCn</p>
+<ol type="1">
+<li>Rapport: INN_TABELL:30SEK_MIX</li>
+<li>Søke opp id-nr.</li>
+<li>Lagre i rett mappe: F10 (nederste knapp)</li>
+<li>Lagre i rett mappe på minnepenn</li>
+<li>Overføre til One Drive på labbPCn</li>
+</ol>
 </section>
 </section>
 </section>
